set variables for maven